# rust-fat

./: Cargo.toml  README.md  integration_fat.rs
cli/: mod.rs
cli /: main.rs
src/: boot.rs  cluster.rs  directory.rs  fat_table.rs  lib.rs  main.rs  mod.rs
src/cli/: cluster.rs  mod.rs
src/fs/: boot.rs  entry.rs  fat.rs  fat_table.rs  mod.rs  path.rs
tests/: fat_tests.rs
